samples/_failures_safe/1761796558_723ba8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c40a3b03.c: In function ‘print_stats’:
./samples/SAFE/__tmp_c40a3b03.c:158:12: error: missing terminating " character
  158 |     printf("Words
      |            ^~~~~~
./samples/SAFE/__tmp_c40a3b03.c:158:5: error: expected expression at end of input
  158 |     printf("Words
      |     ^~~~~~
./samples/SAFE/__tmp_c40a3b03.c:158:5: error: expected declaration or statement at end of input
